--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -6,10 +6,11 @@
     tools:context=".Fragments.FragmentContact">
 
     <!-- liste de contact récupérés -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ListView
         android:id="@+id/listContact"
-        />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/material_blue_grey_800"
+        android:dividerHeight="1dp" />
 
 </FrameLayout>
