--- a/app/src/main/res/layout/fragment_liste_reponse.xml
+++ b/app/src/main/res/layout/fragment_liste_reponse.xml
@@ -5,10 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.FragmentListeReponse">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
+        android:id="@+id/listResponse"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_weight="1"
+        />
+
+    <Button
+        android:id="@+id/addResponseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="Ajouter une réponse"/>
 
 </FrameLayout>
